# servo

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  arbo.txt  mkdocs.yml  output.json  output1.json  output2.json  output3.json  output6.json  pyproject.toml  requirements.txt  sortie_debug.txt
.github/workflows/: docs.yml
docs/: index.md  reference.md
src/mon_projet/: config.py  core.py  detect_fournisseur.py  lecture.py  parse_bl.py  plumber_step1.py  plumber_step2_generic.py  plumber_step2_generic_test.py  plumber_step3_generic.py  textdupdf.py
src/mon_projet/assets/excel/: Requête Backlog_Format Import dates EBP.xlsx
src/mon_projet/assets/json/: config_fournisseurs backup 8 oct 2025.json  config_fournisseurs.json
src/servo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py  test_detect_fournisseur.py
