[tool.black]
line-length = 120
target-version = ["py312"]  # ajuste à ta version locale de Python

[tool.ruff]
line-length = 120
target-version = "py312"            # idem, ajuste si besoin (ex: "py312")
extend-exclude = ["venv", ".venv", "build", "dist"]
fix = true                          # autorise les corrections automatiques

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mon_projet"]
omit = [
  "src/mon_projet/lecture.py",
  "src/mon_projet/textdupdf.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "servo"            # nom du projet (libre)
version = "0.5.0"
requires-python = ">=3.12"
dependencies = ["pandas", "numpy", "pdfplumber", "pytest"]         # mets-y tes deps runtime si besoin

[tool.setuptools.packages.find]
where = ["src"]           # important: layout src/
